Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8292318

Memory corruption in remove_dumptime_info

XMLWordPrintable

    • b12
    • x86_64
    • os_x

      The following test failed in the JDK20 CI:

      runtime/cds/appcds/dynamicArchive/methodHandles/MethodHandlesAsCollectorTest.java

      Here's a snippet from the log file:

      [32.809s][debug][class,load] klass: 0x00000008021a6000 super: 0x0000000800000f70 loader: [loader data: 0x00007ff9e1afb3e0 of 'bootstrap' has a class holder] bytes: 736 checksum: f9f9b825
      [32.810s][info ][class,load] java.lang.invoke.LambdaForm$DMH/0x00000008021a6400 source: __JVM_LookupDefineClass__
      [32.810s][debug][class,load] klass: 0x00000008021a6400 super: 0x0000000800000f70 loader: [loader data: 0x00007ff9e1afcd10 of 'bootstrap' has a class holder] bytes: 1128 checksum: b7222a90
      NMT Block at 0x353337332e38202a, corruption at: 0x353337332e38202a:
      0x353337332e381fa8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e381fb8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e381fc8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e381fd8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e381fe8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e381ff8: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382008: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382018: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382028: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382038: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382048: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382058: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382068: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382078: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382088: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      0x353337332e382098: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ??
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/mallocHeader.inline.hpp:61
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S57199/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/51aa5a64-4dee-4f9f-971e-cdc2ac4018d5/runs/d4f1bba4-7d59-414e-9272-d67ed7abb7fe/workspace/open/src/hotspot/share/services/mallocHeader.inline.hpp:61), pid=94544, tid=12807
      # fatal error: NMT corruption: Block at 0x353337332e38202a: block address is unaligned
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+11) (fastdebug build 20-ea+11-616)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+11-616, mixed mode, sharing, tiered, compressed class ptrs, z gc, bsd-amd64)
      # Core dump will be written. Default location: core.94544
      #
      # An error report file with more information is saved as:
      # /System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S39197/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01c6a795-ba4b-443a-a8df-c2464a82d0d8/runs/a71b7396-8e85-4350-babb-60e071468c70/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/5/hs_err_pid94544.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ];
       stderr: []
       exitValue = 134

      JavaTest Message: JUnit Failure: test(MethodHandlesAsCollectorTest): Expected to get exit value of [0], exit value is: [134]
      java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]


      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x00007ffa64c065f0): ConcurrentGCThread "ZDriver" [stack: 0x000070000c950000,0x000070000ca50000] [id=12807]

      Stack: [0x000070000c950000,0x000070000ca50000], sp=0x000070000ca4f470, free space=1021k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x12d4579] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e9
      V [libjvm.dylib+0x6d92b1] report_fatal(VMErrorType, char const*, int, char const*, ...)+0x1a1
      V [libjvm.dylib+0xe99a36] MallocHeader::assert_block_integrity() const+0xd6
      V [libjvm.dylib+0xe99b4a] MallocTracker::record_free(void*)+0xaa
      V [libjvm.dylib+0xfb8a03] os::free(void*)+0xe3
      V [libjvm.dylib+0x11dd0e5] SystemDictionaryShared::remove_dumptime_info(InstanceKlass*)+0x105
      V [libjvm.dylib+0x11dd23c] SystemDictionaryShared::handle_class_unloading(InstanceKlass*)+0x2c
      V [libjvm.dylib+0x9c81db] InstanceKlass::unload_class(InstanceKlass*)+0xbb
      V [libjvm.dylib+0x5fb488] ClassLoaderData::unload()+0x1e8
      V [libjvm.dylib+0x6002fb] ClassLoaderDataGraph::do_unloading()+0x8b
      V [libjvm.dylib+0x11d39c1] SystemDictionary::do_unloading(GCTimer*)+0x61
      V [libjvm.dylib+0x13925cf] ZUnload::unlink()+0x8f
      V [libjvm.dylib+0x134b998] ZHeap::process_non_strong_references()+0x38
      V [libjvm.dylib+0x1347a08] ZDriver::concurrent_process_non_strong_references()+0x68
      V [libjvm.dylib+0x1347fa7] ZDriver::gc(ZDriverRequest const&)+0x97
      V [libjvm.dylib+0x13480eb] ZDriver::run_service()+0x8b
      V [libjvm.dylib+0x67a99b] ConcurrentGCThread::run()+0x1b
      V [libjvm.dylib+0x1225dd7] Thread::call_run()+0x177
      V [libjvm.dylib+0xfbdcbf] thread_native_entry(Thread*)+0x14f
      C [libsystem_pthread.dylib+0x68fc] _pthread_start+0xe0
      C [libsystem_pthread.dylib+0x2443] thread_start+0xf

      A crash in ZGC code leans toward starting this in hotspot/gc,
      but this is an AppCDS test crashing in NMT code and both of
      those lean toward starting this in hotspot/runtime.

            iklam Ioi Lam
            dcubed Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: