8292318: Memory corruption in remove_dumptime_info